# magpie-fastapi

./: .gitignore  README.md  main.py  pyproject.toml  run.bat  run.py  run.sh  test_imports.py  test_run.py
