[project]
name = "magpie-fastapi"
version = "0.1.0"
description = "FastAPI server wrapper for NVIDIA Magpie TTS Multilingual, developed for the Pandrator application"
keywords = ["tts", "magpie", "fastapi", "nvidia", "multilingual", "pandrator"]
requires-python = ">=3.11"
dependencies = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]
requires-pixi = ">=0.68.0"

[tool.pixi.dependencies]
python = "3.11.*"
pip = "*"
ffmpeg = "*"
# Install pynini from conda-forge (pre-built win-64 binary) so
# pip doesn't try to compile it from source (which fails on MSVC)
pynini = "==2.1.6.post1"
packaging = "<25.0"

[tool.pixi.pypi-dependencies]
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.34.0", extras = ["standard"] }
pydantic = ">=2.0.0"
python-multipart = ">=0.0.9"
soundfile = ">=0.12.0"
numpy = ">=1.24.0,<2.0.0"
pydub = "*"
requests = "*"
# NeMo TTS for MagpieTTSModel - pip will skip building pynini since it's
# already satisfied by the conda-forge package above
nemo_toolkit = { version = ">=2.6.0", extras = ["tts"] }
pyyaml = "*"
torch = ">=2.6.0"
torchaudio = ">=2.6.0"

[tool.pixi.tasks]
start = "python run.py"
start-cpu = "python run.py --cpu"
check = "python -c \"import torch; print(f'Torch {torch.__version__} CUDA: {torch.cuda.is_available()}')\""
install = "python run.py --install-only"